# outdoor_sim

f24_robotics_outdoor_simulation-main/: README.md
f24_robotics_outdoor_simulation-main/install/: local_setup.sh  setup.sh
f24_robotics_outdoor_simulation-main/install/f24_robotics_outdoor_simulation/share/f24_robotics_outdoor_simulation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
f24_robotics_outdoor_simulation-main/install/f24_robotics_outdoor_simulation/share/f24_robotics_outdoor_simulation/launch/: launch.py
f24_robotics_outdoor_simulation-main/install/f24_robotics_outdoor_simulation/share/f24_robotics_outdoor_simulation/worlds/: rc_west_half.wbt
f24_robotics_outdoor_simulation-main/log/: latest_build
f24_robotics_outdoor_simulation-main/src/: package.xml  setup.cfg  setup.py
f24_robotics_outdoor_simulation-main/src/launch/: launch.py
f24_robotics_outdoor_simulation-main/src/worlds/: .outdoor_sim.wbproj  outdoor_sim.wbt
