<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f24_robotics_outdoor_simulation</name>
  <version>0.0.0</version>
  <description>Outdoor Simulation of Downtown Tuscaloosa</description>
  <maintainer email="yoitsbiggiecheese@gmail.com">nwarren317</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>webots_ros2_driver</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
